--- a/Robot_Code/.project
+++ b/Robot_Code/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>2018-BowerUp</name>
+	<name>Robot_Code</name>
 	<comment></comment>
 	<projects>
 	</projects>
