Added trajectory follower for motion profile

--- a/Robot_Code/build.gradle
+++ b/Robot_Code/build.gradle
@@ -5,6 +5,7 @@ plugins {
 
 def ROBOT_CLASS = "frc.robot.Robot"
 
+
 // Define my targets (RoboRIO) and artifacts (deployable files)
 // This is added by GradleRIO's backing project EmbeddedTools.
 deploy {
@@ -23,6 +24,11 @@ deploy {
             // Debug can be overridden by command line, for use with VSCode
             debug = getDebugOrDefault(false)
         }
+       fileCollectionArtifact('motionProfiles') {
+            targets << 'roborio'
+            files = fileTree(dir: '/resources/paths')//, include: "**/*.csv"? //pc directory
+            directory = "/home/lvuser/paths" //roborio directory
+        }
     }
 }
 
@@ -32,6 +38,7 @@ dependencies {
     compile wpilib()
     compile ctre()
     compile navx()
+    compile pathfinder()
 }
 
 // Setting up my Jar File. In this case, adding all libraries into the main jar ('fat jar')
@@ -40,6 +47,10 @@ dependencies {
 jar {
     from configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
     manifest edu.wpi.first.gradlerio.GradleRIOPlugin.javaManifest(ROBOT_CLASS)
+}
+
+task wrapper(type: Wrapper) {
+    gradleVersion = '4.4'
 }
 
 // Force Java 8 Compatibility mode for deployed code, in case the develoment
