--- a/Robot_Code/build.gradle
+++ b/Robot_Code/build.gradle
@@ -34,7 +34,16 @@ deploy {
 
 // Defining my dependencies. In this case, WPILib (+ friends), CTRE Toolsuite (Talon SRX)
 // and NavX.
+repositories {
+        mavenCentral()
+        mavenLocal()
+    }
+
+// Defining my dependencies. In this case, WPILib (+ friends), CTRE Toolsuite (Talon SRX)
+// and NavX.
 dependencies {
+    compile group: 'org.json', name: 'json', version: '20180813'
+    compile group: 'org.scream3r', name: 'jssc', version: '2.8.0'
     compile wpilib()
     compile ctre()
     compile navx()
